[package]
name = "kotosume_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.26"
merriam-webster-http = { version = "0.2.0", default-features = false, features = ["native"] }
moka = { version = "0.12.10", features = ["future"] }
pretty_env_logger = "0.5.0"
rand = "0.9.0"
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = {version = "1.44.1", features = ["full"]}
bincode = "2.0.1"

[profile.dev]
opt-level = 1
